Embed frontend file into golang backend server.
