# doc/swagger/simple_bank.swagger.json
@@ -1,8 +1,13 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "rpc_create_user.proto",
-    "version": "version not set"
+    "title": "Simple Bank API",
+    "version": "1.0",
+    "contact": {
+      "name": "Kjasn",
+      "url": "https://github.com/kjasn",
+      "email": "none@example.com"
+    }
   },
   "tags": [
     {
